[slack-notifier] JDK target aligned